--- a/index.html
+++ b/index.html
@@ -119,8 +119,7 @@
             </a>
         </li>
         <li>
-            <a target="_blank"
-                href="">
+            <a target="_blank" href="">
                 <img src="assets/images/book_logo.png" width="25px" alt="Paper" class="icon"> Paper
                     <!-- <h4><strong>arXiv</strong></h4> -->
             </a>
@@ -184,20 +183,34 @@
           <col span="1" style="width: 33%;">
         </colgroup>
         <tbody>
-
+          <tr> 
+            <th> <image src="imgs/bear_1.png"> </th>
+            <th> <image src="imgs/panda_1.png"> </th>
+            <th> <image src="imgs/elephant_1.png"> </th>
+          </tr>
           <tr> 
             <th> <video muted controls autoplay loop> <source src="dynamic_scene/0_animals24.9.21_bear7.jpg_openvidcheckpoint-2400_final_video.mp4" type="video/mp4"> </video> </th>
             <th> <video muted controls autoplay loop> <source src="dynamic_scene/0_animals24.9.21_panda2.jpg_openvidcheckpoint-2400_final_video.mp4" type="video/mp4"> </video> </th>
             <th> <video muted controls autoplay loop> <source src="dynamic_scene/1_animals_2_9.jpg_openvidcheckpoint-2400_final_video.mp4" type="video/mp4"> </video> </th>
           </tr>
           <tr> 
+            <th> <image src="imgs/sheep_1.png"> </th>
+            <th> <image src="imgs/deer_1.png"> </th>
+            <th> <image src="imgs/horse_2.png"> </th>
+          </tr>          
+          <tr> 
             <th> <video muted controls autoplay loop> <source src="dynamic_scene/3_animals_ram5.jpg_openvidcheckpoint-2400_final_video.mp4" type="video/mp4"> </video> </th>
-            <th> <video muted controls autoplay loop> <source src="dynamic_scene/4_animals_horse8.jpg_openvidcheckpoint-2400_final_video.mp4" type="video/mp4"> </video> </th>
-            <th> <video muted controls autoplay loop> <source src="dynamic_scene/38_openvidcheckpoint-2400_cmp_A_pink_goldfish_swims_freely_i.mp4" type="video/mp4"> </video> </th>
+            <th> <video muted controls autoplay loop> <source src="dynamic_scene/1_animals_2_16.jpg_openvidcheckpoint-2400_final_video.mp4" type="video/mp4"> </video> </th>
+            <th> <video muted controls autoplay loop> <source src="dynamic_scene/5_animals_horse1.jpg_openvidcheckpoint-2400_final_video.mp4" type="video/mp4"> </video> </th>
           </tr>
           <tr> 
+            <th> <image src="imgs/xiang_1.png"> </th>
+            <th> <image src="imgs/guilin_1.png"> </th>
+            <th> <image src="imgs/air_1.png"> </th>
+          </tr>          
+          <tr> 
             <th> <video muted controls autoplay loop> <source src="static_scene/0_scenery_xiangge1.jpg_openvidcheckpoint-2400_final_video.mp4" type="video/mp4"> </video> </th>
-            <th> <video muted controls autoplay loop> <source src="static_scene/1_building_17.jpg_openvidcheckpoint-2400_final_video.mp4" type="video/mp4"> </video> </th>
+            <th> <video muted controls autoplay loop> <source src="static_scene/0_scenery_guilin8.jpg_openvidcheckpoint-2400_final_video.mp4" type="video/mp4"> </video> </th>
             <th> <video muted controls autoplay loop> <source src="static_scene/4_scenery_xiangge9.jpg_openvidcheckpoint-2400_final_video.mp4" type="video/mp4"> </video> </th>
           </tr>
       </table>
@@ -215,16 +228,26 @@
             <col span="1" style="width: 33%;">
           </colgroup>
 
-
+          <tr> 
+            <th> <image src="imgs/flowers_3.png"> </th>
+            <th> <image src="imgs/flowers_1.png"> </th>
+            <th> <image src="imgs/flowers_2.png"> </th>
+          </tr>
             <tr> 
               <th> <video muted controls autoplay loop> <source src="plants_growth/A_green_potted_plant_is_gradually_growing_up_fine2.mp4" type="video/mp4"> </video> </th>
               <th> <video muted controls autoplay loop> <source src="plants_growth/A_pink_flower_is_gradually_shrinking_into_the_shape_of_a_bud_2.mp4" type="video/mp4"> </video> </th>
               <th> <video muted controls autoplay loop> <source src="plants_growth/A_purple_flower_bud_is_striving_to_bloom.mp4" type="video/mp4"> </video> </th>
             </tr>
             <tr> 
+              <th> <image src="imgs/lions_1.png"> </th>
+              <th> <image src="imgs/lion_2.png"> </th>
+              <th> <image src="imgs/tiger_1.png"> </th>
+            </tr>
+
+            <tr> 
               <th> <video muted controls autoplay loop> <source src="plants_growth/Two_large_lion.mp4" type="video/mp4"> </video> </th>
               <th> <video muted controls autoplay loop> <source src="plants_growth/A_little_lion_is_walking_slowly.mp4" type="video/mp4"> </video> </th>
-              <th> <video muted controls autoplay loop> <source src="plants_growth/A_butterfly_picked_nectar_and_flew_away.mp4" type="video/mp4"> </video> </th>
+              <th> <video muted controls autoplay loop> <source src="plants_growth/A_tiger_is_taking_a_walk_by_the_stream.mp4" type="video/mp4"> </video> </th>
             </tr>
         </table>
 
@@ -444,6 +467,29 @@
 
 
 
+        <div class="content has-text-justified">
+          <h3 class="title is-4">More Results</h3>
+          </div>
+    
+          <table class="table" style="height:100%;width:100%;">
+            <colgroup>
+              <col span="1" style="width: 33%;">
+              <col span="1" style="width: 33%;">
+              <col span="1" style="width: 33%;">
+            </colgroup>
+            <tbody>
+    
+              <tr> 
+                <th> <video muted controls autoplay loop> <source src="build_all_direction/1_building_17_out.mp4" type="video/mp4"> </video> </th>
+                <th> <video muted controls autoplay loop> <source src="build_all_direction/3_building_17.jpg_openvidcheckpoint-2400_final_video.mp4" type="video/mp4"> </video> </th>
+                <th> <video muted controls autoplay loop> <source src="build_all_direction/4_zoom_in.mp4" type="video/mp4"> </video> </th>
+              </tr>
+              <tr> 
+                <th> <video muted controls autoplay loop> <source src="build_all_direction/5_building_pan_right.mp4" type="video/mp4"> </video> </th>
+                <th> <video muted controls autoplay loop> <source src="build_all_direction/7_building_pan_up.mp4" type="video/mp4"> </video> </th>
+                <th> <video muted controls autoplay loop> <source src="build_all_direction/9_clock_wise.mp4" type="video/mp4"> </video> </th>
+              </tr>
+          </table>        
 
 
 
