--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
       </span>
 
       <span class="author-block">
-          <a href="">rong zhang</a><sup>1</sup>,
+          <a href="">hong li</a><sup>1</sup>,
       </span>
 
       <span class="author-block">
@@ -99,7 +99,7 @@
       </span>
 
       <span class="author-block">
-          <a href="">hong li</a><sup>1</sup>,
+          <a href="">rong zhang</a><sup>1</sup>,
       </span>
 
       <span class="author-block">
@@ -468,7 +468,7 @@
 
 
         <div class="content has-text-justified">
-          <h3 class="title is-4">More Results</h3>
+          <h3 class="title is-4">Zoom_out;Zoom_in;Pan_left;Pan_right;ClickWise;count_clockwise</h3>
           </div>
     
           <table class="table" style="height:100%;width:100%;">
@@ -492,6 +492,40 @@
           </table>        
 
 
+
+          <div class="content has-text-justified">
+            <h3 class="title is-4">All kinds of Drags</h3>
+            </div>
+      
+            <table class="table" style="height:100%;width:100%;">
+              <colgroup>
+                <col span="1" style="width: 33%;">
+                <col span="1" style="width: 33%;">
+                <col span="1" style="width: 33%;">
+              </colgroup>
+              <tbody>
+
+                <tr> 
+                  <th> <image src="imgs/down_down.png"> </th>
+                  <th> <image src="imgs/in_in.png"> </th>
+                  <th> <image src="imgs/taiji_down.png"> </th>
+                </tr>                
+                <tr> 
+                  <th> <video muted controls autoplay loop> <source src="drag_all_direction/bear_down_down.mp4" type="video/mp4"> </video> </th>
+                  <th> <video muted controls autoplay loop> <source src="drag_all_direction/bear_in_in.mp4" type="video/mp4"> </video> </th>
+                  <th> <video muted controls autoplay loop> <source src="drag_all_direction/bear_taiji.mp4" type="video/mp4"> </video> </th>
+                </tr>
+                <tr> 
+                  <th> <image src="imgs/drag_bear_1.png"> </th>
+                  <th> <image src="imgs/out_out.png"> </th>
+                  <th> <image src="imgs/taiji_up.png"> </th>
+                </tr>                
+                <tr> 
+                  <th> <video muted controls autoplay loop> <source src="drag_all_direction/bear_up_up.mp4" type="video/mp4"> </video> </th>
+                  <th> <video muted controls autoplay loop> <source src="drag_all_direction/bear_out_out.mp4" type="video/mp4"> </video> </th>
+                  <th> <video muted controls autoplay loop> <source src="drag_all_direction/bear_taiji_2.mp4" type="video/mp4"> </video> </th>
+                </tr>
+            </table>                 
 
 
 
