--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
     <img class="summary-img" src="imgs/pipeline.png" style="width:100%;">
     <p class="content is-size-6">The overview of AnimateAnything. Our framework is mainly constituted with two parts:Unified Flow Generation and Video Generation</p>
     <!-- <p class="content is-size-6">  unified Flow Generation and Video Generation</p> -->
-    
+    <img class="summary-img" src="imgs/all_direction.png" style="width:100%;">
 
     <p class="title is-3 mt-5 has-text-centered"> Visualization Results</p>
 
