--- a/index.html
+++ b/index.html
@@ -187,12 +187,12 @@
           <tr> 
             <th> <image src="imgs/bear_1.png"> </th>
             <th> <image src="imgs/panda_1.png"> </th>
-            <th> <image src="imgs/elephant_1.png"> </th>
+            <th> <image src="imgs/sheep_pose_compare.png"> </th>
           </tr>
           <tr> 
             <th> <video muted controls autoplay loop> <source src="dynamic_scene/0_animals24.9.21_bear7.jpg_openvidcheckpoint-2400_final_video.mp4" type="video/mp4"> </video> </th>
             <th> <video muted controls autoplay loop> <source src="dynamic_scene/0_animals24.9.21_panda2.jpg_openvidcheckpoint-2400_final_video.mp4" type="video/mp4"> </video> </th>
-            <th> <video muted controls autoplay loop> <source src="dynamic_scene/1_animals_2_9.jpg_openvidcheckpoint-2400_final_video.mp4" type="video/mp4"> </video> </th>
+            <th> <video muted controls autoplay loop> <source src="dynamic_scene/sheep_large.mp4" type="video/mp4"> </video> </th>
           </tr>
           <tr> 
             <th> <image src="imgs/sheep_1.png"> </th>
@@ -303,7 +303,7 @@
           <tr> 
             <th>
                 <a href="">
-                    <image src="img_quality_compare/fish_camera1.png">
+                    <image src="imgs/fish_pose_2.png">
                     <!-- <image width="200" src="img_quality_compare/fish_camera1.png"> -->
                 </a>
             </th>
@@ -314,7 +314,7 @@
           <tr> 
             <th>
                 <a href="">
-                    <img src="img_quality_compare/horse_camera2.png">
+                    <img src="imgs/horse_pose_2.png">
                 </a>
             </th>
             <th> <video muted controls autoplay loop> <source src="pose_compare/horse_cameractrl.mp4" type="video/mp4"> </video> </th>
@@ -563,7 +563,7 @@
 
           <div class="content has-text-justified">
             <h3 class="title is-4">All kinds of Drags</h3>
-            </div>
+            </div>  
       
             <table class="table" style="height:100%;width:100%;">
               <colgroup>
